@@ -26,7 +26,7 @@
             <div class="form-group row">
               <label for="password" class="col-sm-2 col-form-label">Password:</label>
               <div class="col-sm-10">
-                <input type="password" class="form-control {{ 'is-invalid' if errors.get('password') else '' }}" id="password" name="password" value="{{ wizard.password or '' }}" required>
+                <input type="password" class="form-control {{ 'is-invalid' if errors.get('password') else '' }}" id="password" name="password" value="" required>
                 <div class="invalid-feedback">
                   Please provide a strong password.
                 </div>
@@ -36,7 +36,7 @@
             <div class="form-group row">
               <label for="repassword" class="col-sm-2 col-form-label">Password again:</label>
               <div class="col-sm-10">
-                <input type="password" class="form-control {{ 'is-invalid' if errors.get('repassword') else '' }}" id="repassword" name="repassword" value="{{ wizard.repassword or '' }}" required>
+                <input type="password" class="form-control {{ 'is-invalid' if errors.get('repassword') else '' }}" id="repassword" name="repassword" value="" required>
                 <div class="invalid-feedback">
                   Passwords must be same.
                 </div>
